k8s/holograph-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: holograph-mtls
spec:
  selector:
    matchLabels:
      app: holograph-gateway
  mtls:
    mode: STRICT
