k8s/rbac-canary.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autopilot-canary
